Removed obsolete jvm argument and fixed Darwin icns location in start script template.